<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">杏吧</string>
    <string name="dialog_loading">正在载入...</string>
    <string name="dialog_refreshing">正在更新...</string>
    <string name="today">今天</string>
    <string name="off_line_mode">離線模式開啟，僅供瀏覽本地資料\n若無資料處會以空白顯示</string>
    <string name="fail_connect">連線失敗</string>
    <string name="dialog_title_wrong_say">請正常加入聊天室。</string>
    <string name="dialog_title_dirty">內容參雜不當詞語。</string>
    <string name="dialog_title_block_say">您已被禁止發言。</string>
    <string name="dialog_title_del_chat_room">聊天室即將關閉，請更換聊天室。</string>
    <string name="dialog_title_join_room_fail">無權限進入此聊天室</string>
        
    <string name="dialog_title_join_room_full">聊天室人數已達上限</string>
        
    <string name="dialog_title_join_room_not_found">聊天室不存在</string>

    <string name="dialog_title_relogin">重複登入！ </string>
    <string name="dialog_ok">確認</string>
    <string name="last_msg_image">%s传送了图片</string>
    <string name="name_time_format">%s，%s</string>
    <string name="next_step">下一步</string>
    <string name="permission_read_external_storage">上傳照片需要讀取儲存裝置權限\n請允許權限後再次嘗試</string>
    <string name="permission_denied">SinChat沒有使用此功能所需的權限，請至裝置的「設定」中允許SinChat存取</string>
    <string name="album">相簿</string>
    <string name="select_max_photo">最多只可選擇 %d 張照片</string>

    <string name="login">立即登入</string>
    <string name="register">立即註冊</string>

    <string name="title_message">消息</string>
    <string name="title_party">派對</string>
    <string name="title_find">發現</string>
    <string name="title_account">我的</string>
    <string name="group">群組</string>
    <string name="alreadyfriend">已為好友</string>
    <string name="friend">好友</string>
    <string name="bonus_hint">正在發紅包，還不快來搶</string>
    <string name="input_chat_hint">請輸入消息...</string>
    <string name="ic_photo">相冊</string>
    <string name="ic_take_a_photo">拍照</string>
    <string name="ic_qa">問答</string>
    <string name="ic_exchange">兌換</string>
    <string name="ic_minutes">充值</string>
    <string name="ic_share_task">分享任務</string>
    <string name="ic_talk_task">發言任務</string>
    <string name="ic_send_photo">發圖任務</string>
    <string name="sin">杏</string>
    <string name="sin_money">杏幣</string>
    <string name="vip_level">LV%d</string>
    <string name="ic_card">卡包</string>
    <string name="ic_admin">管理群</string>
    <string name="ic_setting">設置</string>
    <string name="attention">關注</string>
    <string name="getfriend">互為好友</string>
    <string name="fan">粉絲</string>
    <string name="groups">群</string>
    <string name="list">列表</string>
    <string name="card_package">卡包</string>
    <string name="friend_list">好友列表</string>
    <string name="attention_list">關注列表</string>
    <string name="send_message">傳送訊息</string>

    <string name="edit_profile">編輯個人資料</string>
    <string name="profile">個人資料</string>
    <string name="avatar">頭像</string>
    <string name="nick_name">暱稱</string>
    <string name="my_qr_code">我的QR Code</string>
    <string name="done">完成</string>
    <string name="move_image_title">移動照片到想要的位置</string>
    <string name="edit_nick_name">修改暱稱</string>
    <string name="qr_code_hint">掃描上面的QR Code</string>
    <string name="chose_birthday">選擇出生日期</string>

    <string name="edit_password">修改密碼</string>
    <string name="old_password">舊密碼</string>
    <string name="old_password_hint">請輸入舊密碼</string>
    <string name="new_password">新密碼</string>
    <string name="new_password_hint">請輸入新的密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="confirm_password_hint">請再次輸入新的密碼</string>
    <string name="password_limit_hint">密碼最小長度為6個字符</string>
    <string name="forget_password">忘記密碼</string>
    <string name="verification_mail">驗證信箱</string>
    <string name="verification_mail_hint">輸入你的信箱來驗證</string>
    <string name="verification_mail_tip">

        <![CDATA[
        描述信息<br>
        1. 你可以用驗證過的信箱來找回SinChat密碼。<br>
        2. 驗證信可能會在你的垃圾信箱裡。<br>
        3. 驗證信箱你將獲得 <b><font color=#fc86b8>10,000</font></b> 杏幣。]]></string>
    <string name="bind_cellphone">綁定手機號碼</string>
    <string name="bind_bind_confirmcode_hint">輸入驗證碼</string>
    <string name="bind_bind_cellphone_hint">輸入你的手機號碼</string>
    <string name="hint_enter_account">輸入論壇用戶名或者郵箱</string>
    <string name="hint_enter_password">請輸入密碼...</string>
    <string name="friends_circle">朋友圈</string>
    <string name="voice_control">聲控</string>
    <string name="add_cover_hint">新增您喜歡的封面</string>

    <string name="dialog_report_chat_title">是否要舉報此訊息？</string>
    <string name="dialog_report_chat_select_1">廣告訊息</string>
    <string name="dialog_report_chat_select_2">違規圖片</string>
    <string name="dialog_report_chat_select_3">洗版</string>
    <string name="dialog_report_chat_select_4">騷擾其他用戶</string>
    <string name="dialog_report_chat_select_5">頭像或暱稱違規</string>
    <string name="dialog_report_chat_select_6">其它</string>
    <string name="dialog_report_chat_disposal_select_1">禁言2小時</string>
    <string name="dialog_report_chat_disposal_select_2">永久禁言</string>
    <string name="dialog_report_chat_disposal_select_3">只移出聊天室</string>
    <string name="dialog_report_chat_normal_input_hint">請輸入檢舉原因&#8230;</string>
    <string name="report_disposal">違規處置</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="copy">複製</string>
    <string name="replicated">已複製</string>
    <string name="resend">重發</string>
    <string name="report">舉報</string>
    <string name="delete">刪除</string>
    <string name="set_friend">關注</string>
    <string name="cannot_repeat_reports">不能重複舉報</string>
    <string name="delete_message_confirm">是否要刪除此訊息？</string>
    <string name="reward_single">賞</string>
    <string name="report_single">舉</string>

    <string name="dialog_reward_title">打賞杏幣</string>
    <string name="dialog_reward_input_hint">請輸入你要打賞的杏幣金額&#8230;</string>
    <string name="dialog_location_title">請選擇地區</string>
    <string name="no_party_title">您還未加入任何派對\n打開派對列表，可選擇喜歡的派對加入</string>
    <string name="no_party_hint">點擊 [] 可以選您喜歡的地區喔</string>
    <string name="enter_chat">加入聊天</string>
    <string name="group_full">群組人數已滿</string>
    <string name="group_need_invite">此群需要繳請才可加入</string>
    <string name="chat_banned">您目前禁言中，請稍後再試</string>
    <string name="imoji1">😜</string>
    <string name="imoji2">🤗</string>
    <string name="imoji3">😢</string>
    <string name="imoji4">🙂</string>
    <string name="imoji5">😳</string>
    <string name="imoji6">😓</string>
    <string name="imoji7">😂</string>
    <string name="imoji8">😄</string>
    <string name="imoji9">😃</string>
    <string name="imoji10">😀</string>
    <string name="imoji11">😊</string>
    <string name="over_limit">超過可上傳上限</string>
    <string name="post_success">送出成功</string>
    <string name="post_confirm">是否送出發布的內容?</string>
    <string name="post_cancel">是否放棄發布的內容?</string>
    <string name="exchange_success">兌換成功\n快去撿紅包，補充您的杏幣</string>
    <string name="exchange_overtime">不會吧...你還沒兌換。</string>
    <string name="net_problem">網路似乎出了點問題，請檢查後重試</string>
    <string name="file_size_warn">抱歉，您發送的圖太大啦，支持2MB以內的圖片</string>
    <string name="file_size_warn_gif">抱歉，您發送的GIF太大啦，支持2MB以內的GIF圖片</string>
    <string name="still_history">上滑繼續加載</string>
    <string name="no_history">已無歷史訊息</string>
    <string name="delete_history">您要清除聊天室裡的對話紀錄嗎? </string>


</resources>
