<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_marginStart="@dimen/dialog_marginHorizontal"
    android:layout_marginEnd="@dimen/dialog_marginHorizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_report_chat_title"
        android:textColor="@color/main_color_dark"
        android:textSize="@dimen/dialog_title_textSize"/>

    <RadioGroup
        android:id="@+id/reportRadioGroup"
        android:layout_marginTop="@dimen/dialog_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radioButton_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dialog_padding"
            android:text="@string/dialog_report_chat_select_1"
            android:textSize="@dimen/dialog_radio_textSize"
            android:textColor="@color/text_black"
            android:buttonTint="@color/main_color_dark"/>
        <RadioButton
            android:id="@+id/radioButton_2"
            android:layout_marginTop="@dimen/dialog_radio_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dialog_padding"
            android:paddingEnd="0dp"
            android:text="@string/dialog_report_chat_select_2"
            android:textSize="@dimen/dialog_radio_textSize"
            android:textColor="@color/text_black"
            android:buttonTint="@color/main_color_dark" />
        <RadioButton
            android:id="@+id/radioButton_3"
            android:layout_marginTop="@dimen/dialog_radio_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dialog_padding"
            android:paddingEnd="0dp"
            android:text="@string/dialog_report_chat_select_3"
            android:textSize="@dimen/dialog_radio_textSize"
            android:textColor="@color/text_black"
            android:buttonTint="@color/main_color_dark" />
        <RadioButton
            android:id="@+id/radioButton_4"
            android:layout_marginTop="@dimen/dialog_radio_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dialog_padding"
            android:paddingEnd="0dp"
            android:text="@string/dialog_report_chat_select_4"
            android:textSize="@dimen/dialog_radio_textSize"
            android:textColor="@color/text_black"
            android:buttonTint="@color/main_color_dark" />
        <RadioButton
            android:id="@+id/radioButton_5"
            android:layout_marginTop="@dimen/dialog_radio_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dialog_padding"
            android:paddingEnd="0dp"
            android:text="@string/dialog_report_chat_select_5"
            android:textSize="@dimen/dialog_radio_textSize"
            android:textColor="@color/text_black"
            android:buttonTint="@color/main_color_dark" />
        <RadioButton
            android:id="@+id/radioButton_6"
            android:layout_marginTop="@dimen/dialog_radio_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dialog_padding"
            android:paddingEnd="0dp"
            android:text="@string/dialog_report_chat_select_6"
            android:textSize="@dimen/dialog_radio_textSize"
            android:textColor="@color/text_black"
            android:buttonTint="@color/main_color_dark" />
    </RadioGroup>

    <EditText
        android:id="@+id/inputEdit"
        android:layout_marginTop="@dimen/dialog_radio_marginTop"
        android:layout_width="match_parent"
        android:layout_height="132.16dp"
        android:padding="@dimen/dialog_input_padding"
        android:gravity="start|top"
        android:hint="@string/dialog_report_chat_normal_input_hint"
        android:textColorHint="@color/dialog_input_hint"
        android:textSize="@dimen/dialog_input_textSize"
        android:textColor="@color/text_black"
        android:background="@drawable/dialog_input_bg"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dialog_btn_layout_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/report_disposal"
            android:textColor="@color/main_color_dark"
            android:textSize="@dimen/dialog_title_textSize"/>

        <RadioGroup
            android:id="@+id/disposalRadioGroup"
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:buttonTint="@color/main_color_dark">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dialog_padding"
                android:paddingEnd="0dp"
                android:text="@string/dialog_report_chat_disposal_select_1"
                android:textSize="@dimen/dialog_radio_textSize"
                android:textColor="@color/text_black"
                android:buttonTint="@color/main_color_dark" />
            <RadioButton
                android:layout_marginTop="@dimen/dialog_radio_marginTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dialog_padding"
                android:paddingEnd="0dp"
                android:text="@string/dialog_report_chat_disposal_select_2"
                android:textSize="@dimen/dialog_radio_textSize"
                android:textColor="@color/text_black"
                android:buttonTint="@color/main_color_dark"/>
            <RadioButton
                android:layout_marginTop="@dimen/dialog_radio_marginTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dialog_padding"
                android:paddingEnd="0dp"
                android:text="@string/dialog_report_chat_disposal_select_3"
                android:textSize="@dimen/dialog_radio_textSize"
                android:textColor="@color/text_black"
                android:buttonTint="@color/main_color_dark"/>
        </RadioGroup>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/dialog_btn_layout_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/negativeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dialog_btn"
            android:text="@string/cancel"
            android:background="@drawable/dialog_btn_negative_ripple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideLine"/>

        <TextView
            android:id="@+id/positiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dialog_btn"
            android:text="@string/ok"
            android:background="@drawable/dialog_btn_positive_ripple"
            app:layout_constraintStart_toStartOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>