<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EditPasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootLayout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/white">

    <include layout="@layout/title"/>

    <LinearLayout
        android:layout_marginTop="@dimen/account_item_marginTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/account_item_height"
        android:paddingStart="@dimen/edit_profile_item_text_marginStart"
        android:paddingEnd="@dimen/edit_profile_item_text_marginStart"
        android:gravity="center_vertical"
        android:background="@drawable/account_item_bg">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.25"
            android:text="@string/old_password"
            android:textSize="@dimen/account_item_textSize"
            android:textColor="@color/text_black"/>

        <EditText
            android:id="@+id/oldEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.75"
            android:maxLines="1"
            android:inputType="textPassword"
            android:minEms="6"
            android:textSize="@dimen/account_item_textSize"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_hint_color"
            android:hint="@string/old_password_hint"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/account_item_height"
        android:paddingStart="@dimen/edit_profile_item_text_marginStart"
        android:paddingEnd="@dimen/edit_profile_item_text_marginStart"
        android:gravity="center_vertical"
        android:background="@drawable/account_item_bg">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.25"
            android:text="@string/new_password"
            android:textSize="@dimen/account_item_textSize"
            android:textColor="@color/text_black"/>

        <EditText
            android:id="@+id/newEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.75"
            android:minEms="6"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textSize="@dimen/account_item_textSize"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_hint_color"
            android:hint="@string/new_password_hint"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/account_item_height"
        android:paddingStart="@dimen/edit_profile_item_text_marginStart"
        android:paddingEnd="@dimen/edit_profile_item_text_marginStart"
        android:gravity="center_vertical"
        android:background="@drawable/account_item_bg">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.25"
            android:text="@string/confirm_password"
            android:textSize="@dimen/account_item_textSize"
            android:textColor="@color/text_black"/>

        <EditText
            android:id="@+id/confirmEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.75"
            android:maxLines="1"
            android:minEms="6"
            android:inputType="textPassword"
            android:textSize="@dimen/account_item_textSize"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_hint_color"
            android:hint="@string/confirm_password_hint"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/account_item_height"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/password_limit_hint"
            android:textSize="14sp"
            android:textColor="@color/text_black"/>

        <TextView
            android:id="@+id/forgetText"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/forget_password"
            android:textSize="14sp"
            android:textColor="@color/main_color_dark"
            android:background="?selectableItemBackgroundBorderless"/>
    </LinearLayout>
</LinearLayout>