<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_marginStart="@dimen/dialog_marginHorizontal"
    android:layout_marginEnd="@dimen/dialog_marginHorizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/dialog_report_chat_title"
        android:textColor="@color/main_color_dark"
        android:textSize="@dimen/dialog_title_textSize"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/dialog_btn_layout_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/negativeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dialog_btn"
            android:text="@string/cancel"
            android:background="@drawable/dialog_btn_negative_ripple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideLine"/>

        <TextView
            android:id="@+id/positiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dialog_btn"
            android:text="@string/ok"
            android:background="@drawable/dialog_btn_positive_ripple"
            app:layout_constraintStart_toStartOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>