<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/main_color_dark"
        android:textSize="@dimen/account_gray_textSize"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/nick_name"
        android:textColor="@color/main_color_dark"
        android:textSize="@dimen/account_gray_textSize"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="212dp"
        android:layout_marginRight="50dp"
        android:hint="請輸入暱稱"
        android:theme="@style/MyEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="283dp"
        android:layout_marginBottom="303dp"
        android:text="@string/chose_birthday"
        android:textColor="@color/main_color_dark"
        android:textSize="@dimen/account_gray_textSize"
        app:layout_constraintBottom_toTopOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/birthlinear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:textSize="18dp"
            android:text="2019.01.01"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/spinner_btn"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_dropdown"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <!--    <CheckBox-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="50dp"/>-->

<!--    <CheckBox-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="50dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/birthlinear"
        tools:layout_editor_absoluteX="-16dp">

    </LinearLayout>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="@dimen/btn_width"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/btn_positive_disable"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>